# sm_banklog_parser

./: .gitignore  Cargo.toml  readme.md
config/labels/: bank_80.yaml  hwregs.yaml  misc.yaml  vectors.yaml  x_genlabels.yaml  x_rammap.yaml
config/overrides/: bank_80.yaml  overrides.yaml
config/structs/: structs.yaml
logs/: download_banks.py
src/: code.rs  config.rs  data.rs  label.rs  line.rs  main.rs  opcode.rs
