[package]
name = "pjdasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"
regex = "1.5.4"
byteorder = "1.4.3"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
if_chain = "1.0.2"